@@ -1,12 +1,12 @@
 ## Title: |cAFD3FFImperial Cartographer|r
 ## Description: ~_~
 ## Author: |c7c42f2@impda|r
-## AddOnVersion: 17
+## AddOnVersion: 18
 ## APIVersion: 101048
 ## IsLibrary: false
 ## SavedVariables: ImperialCartographerSV ImperialCartographerData ImperialCartographerExport
 ## SavedVariables: ImperialCartographerCyrodiilSubzones 
-## DependsOn: LibImplex>=18
+## DependsOn: LibImplex>=20
 ## OptionalDependsOn: LoreBooks>=99
 ## PCDependsOn: LibAddonMenu-2.0>=41
 
